Update css Solve issues on mobile Fixes #23

--- a/src/View/MapPage/MapPage.css
+++ b/src/View/MapPage/MapPage.css
@@ -1,6 +1,6 @@
 .map-page {
     position: relative;
-    height: 95vh;
+    height: calc(100vh - 64px);
 }
 
 .search {
